[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Israel Abiona <adeyanjuabiona69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
cohere = "^5.5.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
